# turbovec

./: .gitignore  Cargo.toml  README.md  turboquant.py
.github/workflows/: release.yml
benchmarks/: benchmark.py  benchmark_faiss.py  create_diagrams.py
src/: lib.rs
turbovec/: Cargo.toml
turbovec-python/: Cargo.toml  pyproject.toml
turbovec-python/python/turbovec/: haystack.py
turbovec-python/src/: lib.rs
turbovec-python/tests/: test_haystack.py  test_id_map.py  test_index.py
turbovec/src/: encode.rs  id_map.rs  io.rs  lib.rs  pack.rs  rotation.rs  search.rs
turbovec/tests/: concurrent_search.rs  id_map.rs  swap_remove.rs
