[package]
name = "py-turboquant"
version = "0.1.0"
edition = "2024"

[lib]
name = "py_turboquant"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
numpy = "0.27.0"
rayon = "1.10"
ordered-float = "4"

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.17", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ndarray = { version = "0.17", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
